3_jwt/3_2_route_and_jwt_plugin/inventory-service/inventory.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory
  namespace: inventory
  labels:
    app: inventory
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory
  template:
    metadata:
      labels:
        app: inventory
    spec:
      containers:
      - name: inventory
        image: gulcht/inventory-service:latest # Replace with your Docker image
        ports:
        - containerPort: 8080
              
---
apiVersion: v1
kind: Service
metadata:
  name: inventory
  namespace: inventory
spec:
  selector:
    app: inventory
  ports:
  - protocol: TCP
    port: 8080       # Port exposed by the Service
    targetPort: 8080 # Port inside the container
  type: ClusterIP # Options: ClusterIP, NodePort, LoadBalancer
