3_jwt/3_2_route_and_jwt_plugin/inventory-service/inventory-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inventory
  namespace: inventory
  annotations:
    konghq.com/strip-path: "true"
    konghq.com/plugins: jwt-auth, cors-plugin-inventory, rate-limit-5-min, admin-acl
spec:
  ingressClassName: kong
  rules:
  - host: api-test.got.co.th
    http:
      paths:
      - path: /inventory
        pathType: Prefix
        backend:
          service:
            name: inventory
            port:
              number: 8080
